--- a/src/components/Help/HelpPage.module.css
+++ b/src/components/Help/HelpPage.module.css
@@ -27,7 +27,7 @@
 
 .navLink {
     text-decoration: none;
-    color: #8e8e93;
+    color: #636366;
     font-size: 15px;
     font-weight: 500;
     transition: color 0.2s;
